@@ -154,8 +154,8 @@ void EWFFILE::read_buffer(SAMPLE_BUFFER* sbuf) {
 	                  - child_length_rep.samples();
 	//  	dump_child_debug();
 	if (position_in_samples() > 
-	    child_offset_rep.samples() + child_length_rep.samples()) tail = buffersize();
-	assert(tail <= sbuf->length_in_samples() || tail == buffersize());
+	    child_offset_rep.samples() + child_length_rep.samples()) tail = sbuf->length_in_samples();
+	assert(tail <= buffersize());
 	child->seek_position_in_samples(child_start_pos_rep.samples());
 	long int save_bsize = child->buffersize();
 	child->buffersize(tail, child->samples_per_second());
